# SlapThatLikeButton-TestingStarterProject

./: pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
tests/: conftest.py  test_slapping.py
