[tool.poetry]
name = "slapping"
version = "0.1.0"
description = ""
authors = ["Dong Liang <ldifer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
tox = "^3.25.1"
pytest-cov = "^3.0.0"
mypy = "^0.971"

[options.package_data]
slapping = "py.typed"


[flake8]
max-line-length = 160

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=slapping"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true